# eris

./: LICENSE  README.md  pyproject.toml
eris/: __init__.py  constants.py  equations.py  units.py
scratchpad/: learning_sympy.py
tutorials/: 00_organization.md  01_introduction.py  02_basic_dynamical_modeling.ipynb  02_basic_dynamical_modeling.py  three_body_problem.py
