[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eris"
version = "0.1.0"
description = "Examples and analysis of randomness, determinism, and chaos theory."
requires-python = ">=3.9"
dependencies = [
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["."]




